Odigos angualr component issues, fixed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,35 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="container">
+    <div class="footer-box footer-logo" itemscope itemtype="http://schema.org/Organization">
+      <a itemprop="url" href="index.html">
+        <img itemprop="logo" src="/assets/images/logo.png" title="Odigos Logo" alt="Odigos" class="img-responsive">
+      </a>
+    </div>
+    <div class="footer-box footer-links">
+      <a href="terms-tourist.html">Terms for Tourist</a>
+      <a href="terms-guide.html">Terms for Guide</a>
+    </div>
+    <div class="footer-box footer-links">
+      <a href="cancellation-policy.html">Cancellation Policy</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+    </div>
+    <div class="footer-box footer-links">
+      <a href="faq.html">FAQ's</a>
+      <a href="/odigosguides/blog">Blog</a>
+    </div>
+    <div class="footer-box footer-social">
+      <a href="https://www.facebook.com/OdigosApp/" target="_blank" class="facebook">
+        <i class="fa fa-facebook fa-lg" aria-hidden="true" rel="nofollow"></i>
+      </a>
+      <a href="https://twitter.com/Odigos_App" target="_blank" class="twitter" rel="nofollow">
+        <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/Odigos_app/" target="_blank" class="instagram" rel="nofollow">
+        <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+  <div class="container">
+    <div class="copyright">Copyright &copy; 2018 Birdres Technologies Pvt. Ltd. All rights reserved.</div>
+  </div>
+</footer>
